Cleaning up unnecessary line breaks

--- a/index2.html
+++ b/index2.html
@@ -6,21 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Generic Webpage</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://youtu.be/G-T3qKl6y-c" target="_blank">LOGO</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-link active" href="https://youtu.be/5FL0Y-Zasqw" target="_blank">Home <span
-                        class="sr-only">(current)</span></a>
+                <a class="nav-link active" href="https://youtu.be/5FL0Y-Zasqw" target="_blank">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="https://youtu.be/KZsJZecgABE" target="_blank">Contact</a>
                 <a class="nav-link" href="https://youtu.be/xuCO7-DLCaA" target="_blank">About Us</a>
                 <a class="nav-link" href="https://youtu.be/myefy-K_8BY" target="_blank">Messages
