--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>OUR site (not commie)</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 
 <body>
@@ -15,8 +14,7 @@
         <div class="jumbotron text-center">
             <h1>Welcome to our website!</h1>
             <h2>Look at this button! Wow, let's click on it!</h2>
-            <a class="btn btn-primary btn-lg w-100" href="https://youtu.be/iik25wqIuFo" role="button"
-                target="_blank">Learn more</a>
+            <a class="btn btn-primary btn-lg w-100" href="https://youtu.be/iik25wqIuFo" role="button" target="_blank">Learn more</a>
         </div>
         <hr>
         <h3 class="d-inline">Let's look at some random pictures!</h3>
@@ -26,25 +24,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h4 class="font-weight-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro
-                        distinctio dolorum suscipit veniam voluptate quisquam ut eveniet maxime possimus quas ex quia
-                        perspiciatis, iure ad, commodi optio. Aspernatur, at velit.</h4>
-                    <img class="img-thumbnail" src="https://picsum.photos/300/200?random=1"
-                        alt="A random picture that didn't load.">
+                    <h4 class="font-weight-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro distinctio dolorum suscipit veniam voluptate quisquam ut eveniet maxime possimus quas ex quia perspiciatis, iure ad, commodi optio. Aspernatur, at velit.</h4>
+                    <img class="img-thumbnail" src="https://picsum.photos/300/200?random=1" alt="A random picture that didn't load.">
                 </div>
                 <div class="col-sm">
-                    <h4 class="font-weight-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro
-                        distinctio dolorum suscipit veniam voluptate quisquam ut eveniet maxime possimus quas ex quia
-                        perspiciatis, iure ad, commodi optio. Aspernatur, at velit.</h4>
-                    <img class="img-thumbnail" src="https://picsum.photos/300/200?random=2"
-                        alt="A random picture that didn't load.">
+                    <h4 class="font-weight-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro distinctio dolorum suscipit veniam voluptate quisquam ut eveniet maxime possimus quas ex quia perspiciatis, iure ad, commodi optio. Aspernatur, at velit.</h4>
+                    <img class="img-thumbnail" src="https://picsum.photos/300/200?random=2" alt="A random picture that didn't load.">
                 </div>
                 <div class="col-sm">
-                    <h4 class="font-weight-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro
-                        distinctio dolorum suscipit veniam voluptate quisquam ut eveniet maxime possimus quas ex quia
-                        perspiciatis, iure ad, commodi optio. Aspernatur, at velit.</h4>
-                    <img class="img-thumbnail" src="https://picsum.photos/300/200?random=3"
-                        alt="A random picture that didn't load.">
+                    <h4 class="font-weight-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro distinctio dolorum suscipit veniam voluptate quisquam ut eveniet maxime possimus quas ex quia perspiciatis, iure ad, commodi optio. Aspernatur, at velit.</h4>
+                    <img class="img-thumbnail" src="https://picsum.photos/300/200?random=3" alt="A random picture that didn't load.">
                 </div>
             </div>
         </div>
